--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Quickstart"
-description: "Get started with Olptik in minutes"
+description: "Get started with Olyptik in minutes"
 ---
 
 ## Introduction
