--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -5,7 +5,7 @@ description: "Get started with Olyptik in minutes"
 
 ## Introduction
 
-Olptik is a powerful web scraping and data extraction platform that helps you gather and process web data efficiently.
+Olpytik is a powerful web scraping and data extraction platform that helps you gather and process web data efficiently.
 
 ## Getting started with the API
 
@@ -88,7 +88,7 @@ It can be for either a crawl status changes, and/or for every crawl result (sing
       "status": "timed_out",
       "durationInSeconds": 45001,
       "brandId": "680e8bc08cdb14f10180db6a",
-      "startUrls": [ "https://gitbook.com"],
+      "startUrls": ["https://example.com"],
       "numberOfResults": 19,
       "useSitemap": false,
       "maxDepth": 5,
