--- a/sdks/overview.mdx
+++ b/sdks/overview.mdx
@@ -37,6 +37,6 @@ All SDKs provide:
 Before using any SDK, you'll need an API key:
 
 1. [Sign up for Olyptik](https://app.olyptik.io/signup) 
-2. Navigate to [Settings → API Keys](https://app.olyptik.io/0/settings/crawl)
+2. Navigate to [Settings → API Keys](https://app.olyptik.io/settings/crawl)
 3. Generate a new API key
 4. Store it securely (use environment variables)
