--- a/sdks/python.mdx
+++ b/sdks/python.mdx
@@ -17,7 +17,7 @@ pip install olyptik
 
 ## Configuration
 
-First, you'll need to initialize the SDK with your API key - you can get it from the [settings page](https://app.olyptik.io/0/settings/crawl). You can either pass it directly or use environment variables.
+First, you'll need to initialize the SDK with your API key - you can get it from the [settings page](https://app.olyptik.io/settings/crawl). You can either pass it directly or use environment variables.
 
 ```python
 from olyptik import Olyptik
