--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -113,7 +113,7 @@ You can enable either option or both simultaneously.
       "startUrls": ["https://example.com"],
       "numberOfResults": 19,
       "useSitemap": false,
-      "useStaticIps" false,
+      "useStaticIps": false,
       "maxDepth": 5,
       "maxResults": 20,
       "includeLinks": false,
