--- a/sdks/overview.mdx
+++ b/sdks/overview.mdx
@@ -29,14 +29,11 @@ All SDKs provide:
 - ✅ **Authentication** - API key management
 - ✅ **Crawl Management** - Start, monitor, and abort crawls  
 - ✅ **Result Retrieval** - Paginated access to crawl results
-- ✅ **Type Safety** - Full type definitions and IntelliSense support
-- ✅ **Configuration** - Flexible crawl configuration options
 
 ## Getting Your API Key
 
 Before using any SDK, you'll need an API key:
 
-1. [Sign up for Olyptik](https://app.olyptik.io/signup) 
+1. If your not a memeber, you are welcomed to join: [sign up for Olyptik](https://app.olyptik.io/signup) 
 2. Navigate to [Settings → API Keys](https://app.olyptik.io/settings/crawl)
-3. Generate a new API key
-4. Store it securely (use environment variables)
+3. Use the key provided
