--- a/sdks/python.mdx
+++ b/sdks/python.mdx
@@ -187,7 +187,7 @@ The run crawl payload:
 | maxDepth | number | ❌ | 10 | Maximum depth of pages to crawl (1-100) |
 | includeLinks | boolean | ❌ | true | Whether to include links in the crawl results' markdown |
 | useSitemap | boolean | ❌ | false | Whether to use sitemap.xml to crawl the website |
-| timeout | number | ❌ | 60 | Timeout duration in minutes (minimum: 60) |
+| timeout | number | ❌ | 60 | Timeout duration in minutes |
 | engineType | string | ❌ | "auto" | The engine to use: "auto", "cheerio" (fast, static sites), "playwright" (dynamic sites) |
 | useStaticIps | boolean | ❌ | false | Whether to use static IPs for the crawl |
 
