--- a/sdks/python.mdx
+++ b/sdks/python.mdx
@@ -52,6 +52,8 @@ crawl = client.run_crawl({
     "includeLinks": True,
     "timeout": 60,
     "useSitemap": False,
+    "entireWebsite": False,
+    "excludeNonMainTags": True,
     "useStaticIps": False
 })
 
@@ -117,6 +119,8 @@ async def main():
             "includeLinks": True,
             "timeout": 60,
             "useSitemap": False,
+            "entireWebsite: False,
+            "excludeNonMainTags": True,
             "useStaticIps": False
         })
 
@@ -279,7 +283,8 @@ class Crawl:
     completedAt: Optional[str] # Completion timestamp
     durationInSeconds: int     # Total duration
     numberOfResults: int       # Number of results found
-    useSitemap: bool          # Whether sitemap was used
+    useSitemap: bool           # Whether sitemap was used
+    entireWebsite: bool        # Whether to use both sitemap and all found links
     timeout: int              # Timeout setting
 ```
 
