--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -76,6 +76,8 @@ The response will include a `crawl` object that you'll use to track and retrieve
   "maxDepth": 5,
   "numberOfResults": 0,
   "includeLinks": true,
+  "entireWebsite": false,
+  "excludeNonMainTags": true,
   "useStaticIps": false,
   "origin": "api",
   "timeout": 60,
@@ -112,7 +114,9 @@ You can enable either option or both simultaneously.
       "brandId": "680e8bc08cdb14f10180db6a",
       "startUrls": ["https://example.com"],
       "numberOfResults": 19,
+      "entireWebsite": false,
       "useSitemap": false,
+      "excludeNonMainTags": true,
       "useStaticIps": false,
       "maxDepth": 5,
       "maxResults": 20,
