--- a/sdks/nodejs.mdx
+++ b/sdks/nodejs.mdx
@@ -44,6 +44,8 @@ const crawl = await client.runCrawl({
   maxDepth: 10,
   includeLinks: true,
   useSitemap: false,
+  entireWebsite: false,
+  excludeNonMainTags: true,
   timeout: 60,
   engineType: "auto",
   useStaticIps: false
@@ -92,6 +94,8 @@ const abortedCrawl = await client.abortCrawl(crawl.id);
 | maxDepth | number | ❌ | 10 | Maximum depth of pages to crawl (1-100) |
 | includeLinks | boolean | ❌ | true | Whether to include links in the crawl results' markdown |
 | useSitemap | boolean | ❌ | false | Whether to use sitemap.xml to crawl the website |
+| entireWebsite | boolean | ❌ | false | Whether to crawl the entire website |
+| excludeNonMainTags | boolean | ❌ | true | Whether to exclude non-main tags from the crawl results' markdown |
 | timeout | number | ❌ | 60 | Timeout duration in minutes |
 | engineType | string | ❌ | "auto" | The engine to use: "auto", "cheerio" (fast, static sites), "playwright" (dynamic sites) |
 | useStaticIps | boolean | ❌ | false | Whether to use static IPs for the crawl |
@@ -112,6 +116,8 @@ const abortedCrawl = await client.abortCrawl(crawl.id);
 | durationInSeconds | number | Total duration |
 | numberOfResults | number | Number of results found |
 | useSitemap | boolean | Whether sitemap was used |
+| entireWebsite | boolean | Whether to crawl the entire website |
+| excludeNonMainTags | boolean | Whether non-main tags are excluded from the crawl results' markdown |
 | timeout | number | The timeout of the crawl in minutes |
 
 ### CrawlResult
